-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: None
-
Component/s: guththila
-
Labels:None
Hi,
in the guththila_defines.h is a typo. What I see there is:
#ifndef GUTHTHILA_TURE
#define GUTHTHILA_TRUE 1
#endif
what it should read instead is probably
#ifndef GUTHTHILA_TRUE
#define GUTHTHILA_TRUE 1
#endif
See link below for source code:
http://svn.apache.org/viewvc/webservices/axis2/trunk/c/guththila/include/guththila_defines.h?revision=586547&view=markup
Frank