Fixing JIRA Issue AXIS2C-1045